    * footer.inc.php, index.php, server_databases.php, libraries/querywindow.js:
      fix problem not remembering selected server
    * libraries/tooltip.js, themes/*/theme_right.css.php:
      moved not always needed code out of event handler, fixed display with larger font
    * libraries/function.js, css/phpmyadmin.css.php:
      added mark and hover effect to every table of class data
    
2005-10-18 Michal Čihař  <michal@cihar.com>
    * libraries/relation.lib.php: Do not set database if not needed.
    * libraries/common.lib.php: Use common infrastructure for getting tables.
    * Documentation.html, config.default.php, libraries/select_lang.lib.php:
      Allow to limit list of shown languages (RFE #1328003).
    * libraries/common.lib.php: Fix URL detection when not called from top
      level directory (eg. transformations overview).
    * Documentation.html, config.default.php, export.php, import.php,
      tbl_change.php, tbl_replace_fields.php, libraries/common.lib.php,
      libraries/display_export.lib.php, libraries/display_import.lib.php,
      libraries/sql_query_form.lib.php: Support for user specific upload and
      save directories (RFE #1260039).

2005-10-18 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * querywindow.php: wrong handling of linebreaks in query: bug #1243888
    * left.php, sql.php, tbl_change.php, libraries/common.lib.php,
      libraries/querywindow.js: update row count in left frame bug #1243908
    * libraries/common.lib.php:
      bug #1216521: display duplicate rows for failed unique key creation
    
2005-10-17 Michal Čihař  <michal@cihar.com>
    * lang/czech: Translation fixes.
    * libraries/common.lib.php: Group databases by rightmost separator (bug
      #1325651).
    * libraries/string.lib.php: Fix escaping detection on multi byte strings.
    * libraries/sql_query_form.lib.php: No warning if no db defined.
    * libraries/sqlparser.lib.php: Avoid warning if analyzing failed.
